# sleepy-rustaceans-lang

./: Cargo.toml  README.md  build.rs  tests.txt
src/: analyzer.rs  compiler.rs  executer.rs  lang.l  lang.y  main.rs  types.rs
tests/: conditionals  definitions  g3a.bad  g3a.good  g3b.bad  g3b.good  max  max_fraction  put  type_mismatch
tests/other/: g1a.bad  g1a.good  g1b.bad  g1b.good  g2a.bad  g2a.good  g2b.bad  g2b.good  g3b.bad  g3b.good  g4a.bad  g4a.good  g4b.bad  g4b.good  key.g1  key.g2  key.g3  key.g4
