[package]
authors = ["Graham Scheaffer <me@gisch.dev>", "Aaron Ingalls", "Blake Nedved"]
edition = "2018"
name = "sleepy-rustaceans-lang"
version = "0.1.0"
[[bin]]
doc = false
name = "sleepy-rustaceans-lang"

[build-dependencies]
cfgrammar = "0.9"
lrlex = "0.9"
lrpar = "0.9"

[dependencies]
cfgrammar = "0.9"
lasso = "0.5"
lrlex = "0.9"
lrpar = "0.9"
thiserror = "1.0"